Add Metrical analytics

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
     <!-- Title -->
     <title>Magmatic</title>
+
+    <script>
+      window.metrical = {
+        app: 'WiZK7O1xE',
+      };
+    </script>        
+    <script async
+        src="https://cdn.metrical.xyz/script.js"
+        type="text/javascript">
+    </script>
   </head>
   <body>
     <div id="app"></div>
